--- a/Homework_03_20.Rmd
+++ b/Homework_03_20.Rmd
@@ -1,29 +1,206 @@
 ---
-title: "Assignment_03_13_"
+title: "Assignment_03_20"
 output: html_document
-date: "2024-03-13"
+date: "2024-03-20"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## 과제 1 : 사칙연산
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r x}
+x = sqrt(2)
+print(x)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r x1}
+x1 = abs(-4.5)
+print(x1)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r x2}
+x2 = log10(20)
+print(x2)
+```
+
+```{r x3}
+x3 = exp(5)
+print(x3)
+```
+
+```{r x4}
+x4 = gamma(5)
+print(x4)
+```
+
+```{r x5}
+x5 = log(20)
+print(x5)
+```
+
+```{r x6}
+x6 = round(3.141592)
+print(x6)
+```
+
+## 과제 2: 내장함수 확률밀도함수 산출
+
+```{r x mu sigma}
+x <- 5
+mu <- 5
+sigma <- 1
+
+normal_density <- dnorm(x, mean = mu, sd = sigma)
+print(normal_density)
+```
+
+```{r x lambda}
+x <- 1
+lambda <- 5
+
+exponential_density <- dexp(x, rate = lambda)
+print(exponential_density)
+```
+
+```{r x a b}
+x <- 50
+a <- 80
+b <- 1.5
+
+weibull_density <- dweibull(x, shape = a, scale = b)
+print(weibull_density)
+```
+
+## 과제 3: 경로 확인 및 값 지워지는지 확인.
+
+```{r x A b}
+A = 5
+b = 6
+
+tmp <- b ** 2
+result <- 2*A + tmp 
+print(result)
+
+rm(result)
+```
+
+```{r result b}
+result1 <- (10**5) + (3 ** b)
+print(result1)
+
+# 이제 이거를 모두 지워보자.
+rm(result1)
+
+# 검색했을 때도 없는 것을 확인. 
+rm(A, b)
+ls()
+```
+
+## 과제 4 : 입출력 함수 정의하기 
+
+``` {r input, output}
+  input <- function(x, Mu, sigma){
+    pdf <- dnorm(x, mean = Mu, sd = sigma)
+    return(pdf)
+  }
+  output <- function(x, Mu, sigma){
+    # value = f(x)
+    value <- input(x, Mu, sigma)
+    out_val <- 10 * value
+    return(out_val)
+  }
+```
+
+```{r x Mu sigma}
+x <- 1
+Mu <- 0
+sigma <- 1
+
+output1 <- output(x, Mu, sigma)
+print(output1)
+```
+
+## 과제 5 : 반복문을 활용한 계산
+
+```{r result}
+
+result <- 0
+for(i in 1:100){
+  result <- result + i**2
+}
+print(result)
+```
+
+```{r prod}
+prod(1,2,3,4,5,6,7,8,9,10)
+```
+
+```{r cos}
+cos <- 0
+for(i in 1:20){
+  angle<- i/20 * pi
+  cos <- cos + cos(angle)
+}
+print(cos)
+```
+
+## 과제 6 : 행렬 만들기
+
+```{r x1 x2 x3 x mat1}
+
+x1<-1:3
+x2<-4:6
+x3<-7:9
+
+x<-c(x1,x2,x3)
+mat1<-rbind(x1,x2,x3)
+
+dimnames(mat1)[[2]]<-c("A", "B","C")
+dimnames(mat1)[[1]]<-c("첫째", "둘째", "셋째")
+mat1
+
+# 2행 3열에 해당하는 값 출력. 
+mat1[2,3]
+```
+
+## 과제 7 : iris 데이터 뽑아내기
+
+```{r virfinica_data}
+
+data(iris)
+virginica_data <- subset(iris, Species == 'virginica')
+head(virginica_data)
+```
+
+## 과제 8 : iris 데이터 중 Petal의 길이와 Species 데이터만 뽑기.
+
+```{r pental_len species data_list}
+# 3번째 열 값
+petal_len <- iris$Petal.Length
+# Species 값
+species <- iris$Species
+
+# 이를 list 값으로 가지고 있는 형태
+data_list <-list(Petal_Length = petal_len, Species = species)
+str(data_list)
+```
+
+## 과제 9 : 반복문 + 함수식을 활용하여 조건에 맞는 출력 값 출력하기 
+
+```{r Range_print_data}
+Range_print_data<-function(species){
+  for(i in 1:length(species)){
+    if(species[i] == 'setosa'){
+      print(1) 
+    }else if(species[i] == 'versicolor'){
+      print(2)
+    }else if(species[i] == 'virginica'){
+      print(3)
+    }
+  }
+}
+
+Range_print_data(iris$Species)
+```
