--- a/산업공학특론I_4-5주차_통계적추정&가설검정_실습.Rmd
+++ b/산업공학특론I_4-5주차_통계적추정&가설검정_실습.Rmd
@@ -61,7 +61,7 @@ curve(dexp(x, rate= lse_opt$minimum), col= 'blue', add =T)
 legend('topright', legend=c('MLE','LSE'), col=c('red', 'blue'),lty=1)
 
 ```
-
+s
 
 ### 2. 구간추정
 
@@ -106,7 +106,34 @@ param <- z*se
 #### 2-2. CP
 ```{r simul_cp}
 # 10000번의 시뮬레이션을 수행하고, 시뮬레이션 1세트 당 100개의 난수 생성
+
+
+# 1세트당 100개
+nx <- 1000
+nsim<- 100000
+cp <- 0
+alpha <- 0.05
+mu <- 0; sig <- 1
+
+for(i in 1:nsim){
+  x <- rnorm(nx)
+  m <- mean(x); se <- sd(x)/sqrt(nx)
+  
+  # 신뢰구간 계산 (거꾸로 계산을 하게 하여, 우리가 원하는 신뢰구간인 1.96)
+  z <- qnorm(alpha/2, lower.tail=F)
+  # 낮은 신뢰구간
+  lower <- m - z*se
+  upper <- m + z*se
+  
+  # 커버리지 평가 
+  if(mu >= lower & mu <= upper){cp <- cp +1}
+}
+cp / nsim
+
 # 이론적인 신뢰수준 하에서 정의된 신뢰구간 산출
+
+
+
 # 총 10000번 중 실제 참값이 포함된 비율을 평가하여 신뢰수준의 정합성을 검토
 
 # 표준정규분포로부터 샘플 생성하여 평균, 표준오차 계산
@@ -143,13 +170,28 @@ param <- z*se
 ```{r data_eda}
 
 # 데이터 로드 및 조회
+dat <- read.csv('산업공학특론I_4-5주차_실습 데이터.csv')
+head(dat)
 
 # 나이와 BMI의 경우 보험료를 결정하는 인자가 되어야 하므로, 범주화 수행
+# %/% : 몫을 반환해주는 것. 
+group <- function(x){
+  bp <- (min(x) %/% 10):(max(x) %/% 10+1)*10
+  cut(x, breaks=bp, include.lower=T)
+}
+dat$bmi <- group(dat$bmi)
+dat$age <- group(dat$age)
+
+summary(dat)
 
 # 데이터 탐색을 위한 시각화 수행
+
 # 이 때, 범주형은 막대그래프, 연속형은 히스토그램으로 분포 시각화하도록 함수 작성
 
 # 4행 2열 배치로 시각화 진행
+
+
+
 ```
 
 <br>
@@ -160,6 +202,20 @@ param <- z*se
 # lapply 함수를 사용하면 리스트 단위의 개별 summary를 진행할 수 있음
 
 # 유효한 차이를 보이는 변수를 기반으로 유형별 경험적 밀도/누적분포 시각화 함수 정의
+
+grp_summary <- function(grp){
+  dat_spl <- split(dat$charges, grp)
+  print(lapply(dat_spl, summary))
+}
+
+colnames(dat)
+for (i in 1:(ncol(dat)-1)){
+  print('###################')
+  print(colnames(dat)[i])
+  # 모든 열에 대해서 split하여 결과를 뽑아주는 것.  
+  grp_summary(dat[,i])
+}
+  
 
 ```
 
@@ -174,11 +230,21 @@ param <- z*se
 ```{r data_meantest}
 # 단일 표본에 대한 검정
 ### H0: 평균 보험료가 15,000원을 넘는다.
-### H1: 평균 보험료가 15,000원을 넘지 않는다.
+### H1: 평균 보험료가 15,000원을 넘지 않는다. => 결론
+
+# 대부분 t 검정을 활용하는 편이 많음. / 신뢰구간이 150000원을 포함하지 않는다는 의미. 
+t.test(dat$charges, mu = 15000, alternative = 'less')
 
 # 독립적인 두 표본에 대한 검정
 ### H0: 흡연자/비흡연자 간 평균 보험료에는 차이가 없다.
-### H1: 흡연자/비흡연자 간 평균 보험료에는 차이가 존재한다.
+### H1: 흡연자/비흡연자 간 평균 보험료에는 차이가 존재한다. => 결론
+
+# 데이터를 charges와 smokers를 기준으로 나눠서 진행. 
+dat_smoke <- split(dat$charges, dat$smoker)
+names(dat_smoke)
+no <- dat_smoke$no; yes <- dat_smoke$yes
+t.test(no, yes, var.equal = T) # 등분산을 가정일 때의 결과 값. 
+t.test(no, yes, var.equal = F) # 불등분산 가정일 때의 결과 값.
 
 ```
 
@@ -191,6 +257,9 @@ param <- z*se
 ### H0: 흡연자/비흡연자 간 보험료의 편차는 동일하다.
 ### H1: 흡연자/비흡연자 간 보험료의 편차는 동일하지 않다.
 
+# 두 분산의 차이가 있음을 확인할 수 있고, 이는 F분포를 따라 통계분포가 산출된 것을 알 수 있음. 
+var.test(no, yes, conf.level = 0.99)
+
 ```
 
 
@@ -201,11 +270,17 @@ param <- z*se
 ### H0: 가입자중 절반 이상이 15,000원이 넘는 보험료를 낸다.
 ### H1: 가입자중 절반 미만이 15,000원이 넘는 보험료를 낸다.
 
+#분산, 평균과 같이 연속적인 수치가 아님. 
+ndat <- length(dat$charges) # nrow(dat)
+np <- sum(dat$charges > 15000)
+ndat; np # 1338명 중 358명의 보험료 값이 오른다. 
 
 # 독립적인 두 표본에 대한 검정
 ### H0: 흡연여부와 관계없이 15,000원 넘게 보험료를 내는 비율은 동일하다.
 ### H1: 흡연자/비흡연자 간 15,000원 넘게 보험료를 내는 비율이 상이하다.
 
+# 총 데이터에서 만족하는 ndat값을 뽑아줌. 
+prop.test(np, ndat, p=0.5, alternative='less')
 
 ```
 
@@ -215,8 +290,50 @@ param <- z*se
 ### H0: 범주형 변수와 관계없이 보험을 가입한다.
 ### H1: 범주형 변수별로 보험 가입률이 다르다.
 
+# 비율과 다르게 여러 개의 확률분포 값이 들어와야 함. 
+
+## 1차 분할표
+x <- dat$age
+test_one <- function(x){
+  # table의 경우 넣어준 값에 따라 얼마나 데이터가 들어있는지를 한번에 보여주는 것. 
+  ob <- table(x) 
+  # table의 평균|| rep (반복문)
+  ex <- rep(mean(ob), length(ob))
+  # 카이스퀘어 검정 || 찾아볼 것. 
+  chisq.test(rbind(ob, ex))
+}
+
+# 모든 범주형 변수에 대한 일차분할표 검정
+for (i in 1:(ncol(dat)-1)){
+  chi_test <- test_one(dat[,i])
+  if (chi_test$p.value < 0.05){
+    print(colnames(dat)[i])
+    print(chi_test)
+  }
+}
+
+
+# df = 자유도 (5를 의미) || p-value는 아주 작게 나왔으므로, 분포는 동일하다고 보기 어려움. 
+# 즉, 연령대 별로 분포의 차이가 있다고 확인할 수 있음. 
+
+
 # 이차분할표 검정
 ### H0: 조합된 범주형 변수는 서로 연관성이 없다.
 ### H1: 조합된 범주형 변수는 서로 연관성이 있다.
+
+# 1 ~ ncol(dat)-1 열까지의 
+for (i in 1:(ncol(dat)-2)){
+  for(j in (i+1):(ncol(dat)-1)){
+     chi_test <- chisq.test(table(dat[,i], dat[,j]) )
+     if (chi_test$p.value < 0.05){
+       print(colnames(dat)[i])
+       print(colnames(dat)[j])
+       print(chi_test)
+     }
+  }
+}
+# p-value가 조금 높게 나타났다는 점게서, 연관성이 없음 
+
+
 
 ```
