--- a/산업공학특론I_8주차_상관분석&단순회귀분석_실습.Rmd
+++ b/산업공학특론I_8주차_상관분석&단순회귀분석_실습.Rmd
@@ -48,12 +48,27 @@ knitr::opts_chunk$set(fig.width=9, fig.height=9)
 
 # 데이터 로드 및 요약
 
+dat <- read.csv('B0005.csv')
+head(dat)
+
 # 데이터 전처리 1 - 불필요한 데이터 제거
 
+dat <- dat[, c("cycle","capacity")]
+dat
+
+
 # 데이터 전처리 2 - cycle 단위 축소
+dat$cycle <- dat$cycle / 100
+
+
 
 # 데이터 시각화
+install.packages("GGally")
 
+library(GGally)
+ggpairs(dat)
+
+  
 ```
 
 <br>
@@ -63,9 +78,29 @@ knitr::opts_chunk$set(fig.width=9, fig.height=9)
 
 #상관계수 테이블 생성
 
+install.packages('corrplot')
+library(corrplot)
+
+## 피어슨 상관계수
+
+corr_p <- cor(dat, method= "pearson")
+corr_k <- cor(dat, method= "kendall")
+corr_s <- cor(dat, method= "spearman")
+
+
 # 상관계수 테이블 시각화
 
+col <- colorRampPalette(c('red', 'blue'))
+#corrplot(corr_p col=)
+corrplot(corr_p, col=col(200), method="square",
+         addCoef.col = "black", type='upper')
+
 # 상관계수 유의성 검정
+x <- dat$cycle
+y <- dat$capacity
+
+cor(x,y)
+cor.test()
 
 ```
 
@@ -75,16 +110,49 @@ knitr::opts_chunk$set(fig.width=9, fig.height=9)
 
 ```{r regression}
 
-# 회귀모델 수립
+# 회귀모델 수립 # y: 독립변수 || x = 종속변수
+reg <- lm(capacity ~ cycle, data = dat)
 
 # 모델 수립 결과
+summary(reg)
 
 # 적합결과 시각화
+ggplot(dat, aes(x = cycle, y = capacity)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE, color = "red") +
+  labs(title = "Scatterplot of Capacity against Cycle",
+       x = "Cycle", y = "Capacity")
 
 # 신뢰구간, 예측구간 산출
+newdata <- data.frame(cycle = 50)
+conf_interval <- predict(reg, newdata, interval = "confidence", level = 0.95)
+pred_interval <- predict(reg, newdata, interval = "prediction", level = 0.95)
+
+
+# 신로구간 출력
+print("Confidence Interval:")
+print(conf_interval)
+
+# 예측 수준 
+print("Prediction Interval:")
+print(pred_interval)
+
 
 # 분산분석
+anova(reg)
 
 # 회귀모형 가정 검토
+
+#1. Residuals vs Fitted values plot
+
+plot(reg$fitted.values, reg$residuals, main = "Residuals vs Fitted Values",
+     xlab = "Fitted values", ylab = "Residuals")
+abline(h = 0, col = "red")
+
+# 2. Normal Q-Q plot
+qqPlot(reg, main = "Normal Q-Q Plot")
+
+# 3. Scale-location plot
+plot(reg, which = 3)
 
 ```
